# hawkenject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: FUNDING.yml
ext/detours/: detours.lib
ext/sdk/: SDK.hpp
ext/sdk/SDK/: Hawken_BaseAI_classes.hpp  Hawken_BaseAI_functions.cpp  Hawken_BaseAI_parameters.hpp  Hawken_BaseAI_structs.hpp  Hawken_Basic.cpp  Hawken_Basic.hpp  Hawken_Core_classes.hpp  Hawken_Core_functions.cpp  Hawken_Core_parameters.hpp  Hawken_Core_structs.hpp  Hawken_Engine_classes.hpp  Hawken_Engine_functions.cpp  Hawken_Engine_parameters.hpp  Hawken_Engine_structs.hpp  Hawken_GFxUI_classes.hpp  Hawken_GFxUI_functions.cpp  Hawken_GFxUI_parameters.hpp  Hawken_GFxUI_structs.hpp  Hawken_GameFramework_classes.hpp  Hawken_GameFramework_functions.cpp  Hawken_GameFramework_parameters.hpp  Hawken_GameFramework_structs.hpp  Hawken_HawkenGameContent_classes.hpp  Hawken_HawkenGameContent_functions.cpp  Hawken_HawkenGame_classes.hpp  Hawken_HawkenGame_parameters.hpp  Hawken_HawkenGame_structs.hpp  Hawken_IpDrv_classes.hpp  Hawken_IpDrv_functions.cpp  Hawken_IpDrv_parameters.hpp  Hawken_IpDrv_structs.hpp  Hawken_OnlineSubsystemMeteor_classes.hpp  Hawken_OnlineSubsystemMeteor_functions.cpp  Hawken_OnlineSubsystemMeteor_parameters.hpp  Hawken_OnlineSubsystemMeteor_structs.hpp  Hawken_UDKBase_classes.hpp  Hawken_UDKBase_functions.cpp  Hawken_UDKBase_parameters.hpp  Hawken_UDKBase_structs.hpp  Hawken_WinDrv_classes.hpp  (+5 more)
res/: hawkenject.h  hawkenject.rc  hook.rc
shared/cmake/: atomic.msvc.cmake
src/hook/: exports.def  main.cpp  objects.hpp  utils.hpp
src/injector/: main.cpp
